Roundcube Webmail SieveRules
============================

2009 11 25
==========
 * Allow default headers, operators and flags to be overridden
 * Fix bug in body action

2009 11 16
==========
 * Allow file header to be overridden

2009 11 14
==========
 * Allow appending of original subject to vacation messages (requires variables extension in sieve)
 * Parse multiple email addresses when setting redirect

2009 11 09
==========
 * Fix bug in detection of vacation charset

2009 11 08
==========
 * Add support for multiple rulesets
 * Use core config function (WARNING: Complete re-write of config file!)
 * Some JS cleanup

2009 10 31
==========
 * Use frames to avoid full page reloads
 * Use rule cache to speed things up a little

2009 09 23
==========
 * Support folder name encoding
 * Support multiple hosts

2009 09 05
==========
 * Minor layout updates

2009 09 03
==========
 * Localisation updates

2009 08 25
==========
 * Add support for spamtest extension (by Vladislav Bogdanov)

2009 07 17
==========
 * Fix get_form_tags() call after r2755

2009 07 11
==========
 * Fix support for dovecot 1.2
 * Add support for copy extension
 * Add support for body extension
 * Better error reporting

2009 06 27
==========
 * Use imap->mod_mailbox()
 * Use better identity checking

2009 06 07
==========
 * Add possibility to easily switch between \r\n and \n in sieve file and also change indent
 * Swap split() for explode(), PHP 5.3 compatibility

2009 05 31
==========
 * Use list.js from the core

2009 05 30
==========
 * Added config var to auto load default rules when no user ones exist and skip setup screen
 * Added support ESC key to stop dragging
 * Added support for enotify and imap4flags
 * Added delete icon
 * Fixed JS bug when adding second rule

2009 05 25
==========
 * Fixed bug in rule moving

2009 05 24
==========
 * Added support for plugin template system
 * Added up/down/delete key support on the filters list
 * Added ability to drag examples to filters list